# OSEC

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cli/: Makefile.linux  Makefile.osx  Makefile.windows  cli.cpp  cli.h
qt/: MainChatWindow.cpp  MainChatWindow.h  MainChatWindow.ui  main.cpp  mainwindow.cpp  mainwindow.ui  osec.pro
source/: App.cpp  App.h
src/: App.cpp
